sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:19: error: not found: value n
    for (i <- 0 to n){
                   ^